<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GENERAL -->
    <string name="app_name">tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_scann">Scann</string>

    <string-array name="sections">
        <item>Scann</item>
        <item>Library</item>
        <item>Watchlist</item>
    </string-array>

    <!-- SECTIONS -->
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- SCANN SECTION -->
    <string name="scann_button">Scann now</string>
    <string name="scann_button_share">Scann and share</string>

    <!-- SCANN RESULT SECTION -->
    <string name="comic_collection">Scann now</string>
    <string name="comic_tome">Tome number</string>
    <string name="comic_name">Tome name</string>
    <string name="comic_collection">Collection name</string>
    <string name="comic_edition">Edition</string>
    <string name="comic_year">Parution year</string>
    <string name="scann_result_action">Add to</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_validate">Validate</string>
    <string name="create_collection">CREATE</string>
    
    <string-array name="scann_result_actions">
        <item>Library</item>
        <item>Watchlist</item>
    </string-array>
    
    <!-- LIBRARY ITEMS -->
    <string name="collection_items_bought_date">Bought date :</string>
    <string name="collection_items_release_date">Release date :</string>
    <string name="collection_items_order">Tome number :</string>
    <string name="collection_items_collection">Collection name :</string>
    
    <!-- WATCHLIST ITEMS -->
    <string name="collection_items_added_date">Watched since :</string>
    <string name="watchlist_delete">Delete</string>
    <string name="watchlist_edit">Edit</string>
    <string name="watchlist_set_to_bought">Set as bought</string>
    <string name="watchlist_share_item">Share this item</string>
    <string name="watchlist_share_all">Share my watchlist</string>
    <string name="watchlist_options_cancel">Cancel</string>

</resources>